--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
     "start": "vinxi start"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.62.7",
-    "@tanstack/react-query-devtools": "^5.62.7",
-    "@tanstack/react-router": "^1.88.0",
-    "@tanstack/react-router-with-query": "^1.88.0",
-    "@tanstack/router-devtools": "^1.88.0",
-    "@tanstack/start": "^1.88.0",
+    "@tanstack/react-query": "5.66.0",
+    "@tanstack/react-query-devtools": "5.66.0",
+    "@tanstack/react-router": "1.102.1",
+    "@tanstack/react-router-with-query": "1.102.1",
+    "@tanstack/router-devtools": "1.102.1",
+    "@tanstack/start": "1.102.2",
     "@zedux/react": "1.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scan": "0.0.46",
-    "react-virtualized-auto-sizer": "1.0.24",
-    "react-window": "1.8.10",
-    "tailwind-merge": "^2.5.5",
-    "vinxi": "0.5.1"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-scan": "0.1.3",
+    "react-virtualized-auto-sizer": "1.0.25",
+    "react-window": "1.8.11",
+    "tailwind-merge": "2.6.0",
+    "vinxi": "0.5.3"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "@types/react": "^18.3.16",
-    "@types/react-dom": "^18.3.5",
+    "@types/node": "22.13.1",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@types/react-window": "1.8.8",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2",
-    "vite-tsconfig-paths": "^5.1.4"
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.7.3",
+    "vite": "6.1.0",
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
