--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "start": "vinxi start"
   },
   "dependencies": {
-    "@tanstack/react-query": "5.66.0",
-    "@tanstack/react-query-devtools": "5.66.0",
-    "@tanstack/react-router": "1.102.1",
-    "@tanstack/react-router-with-query": "1.102.1",
-    "@tanstack/router-devtools": "1.102.1",
-    "@tanstack/start": "1.102.2",
-    "@zedux/react": "1.3.3",
+    "@tanstack/react-query": "5.67.3",
+    "@tanstack/react-query-devtools": "5.67.3",
+    "@tanstack/react-router": "1.114.15",
+    "@tanstack/react-router-with-query": "1.114.15",
+    "@tanstack/react-start": "1.114.15",
+    "@tanstack/router-devtools": "1.114.15",
+    "@zedux/react": "2.0.0-rc.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-scan": "0.1.3",
